--- a/src/views/manage-import/components/Table/styles.css
+++ b/src/views/manage-import/components/Table/styles.css
@@ -48,14 +48,14 @@
 }
 
 .table-row {
-    background: #344675;
-    background-image: linear-gradient(to bottom left, #344675, #263148, #344675);
+    background: #fff;
+    background-image: linear-gradient(#dde5ed, #fff);
     background-size: 210% 210%;
     background-position: top right;
-    background-color: #344675;
+    background-color: #fff;
     transition: all 0.15s ease;
     box-shadow: none;
-    color: #ffffff;
+    color: #555;
 
     display: flex;
     flex-direction: row;
@@ -66,7 +66,7 @@
     flex-grow: 0;
 }
 .table-row:hover {
-    background-image: linear-gradient(to bottom left, #344675, #8aa967, #6b7534);
+    background-image: linear-gradient(#fff, #fff);
 }
 
 .table-cell {
@@ -83,7 +83,7 @@
     display: flex;
 }
 
-.table-cell .css-1pysi21-MuiFormLabel-root-MuiInputLabel-root {
+/* .table-cell .css-1pysi21-MuiFormLabel-root-MuiInputLabel-root {
     color: #fff;
 }
 
@@ -145,25 +145,25 @@
 
 .table-cell .css-1glvl0p-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-clearIndicator:hover {
     background-color: rgba(255, 255, 255, 0.16);
-}
+} */
 
 .table-cell textarea {
-    background: rgba(255, 255, 255, 0);
-    color: #fff;
-    border-color: rgba(255, 255, 255, 0.16);
+    /* background: rgba(255, 255, 255, 0); */
+    /* color: #fff; */
+    /* border-color: rgba(255, 255, 255, 0.16); */
     border-radius: 4px;
     border-width: 1px;
     padding: 8.5px 14px;
 }
 
-.table-cell textarea:focus {
+/* .table-cell textarea:focus {
     outline: 0;
     border-color: #fff;
-}
+} */
 
-.table-cell .css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root {
+/* .table-cell .css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root {
     color: rgba(255, 255, 255, 0.8);
-}
+} */
 
 /* .table-cell .css-1pysi21-MuiFormLabel-root-MuiInputLabel-root {
     font-size: 0.875rem;
