--- a/src/views/manage-import/components/Table/styles.css
+++ b/src/views/manage-import/components/Table/styles.css
@@ -175,5 +175,5 @@
 }
 
 .order-ETA-notif {
-    background-image: linear-gradient(#f00, #fff);
+    background-image: linear-gradient(#f0adad, #fff);
 }
