--- a/src/views/manage-import/components/Table/styles.css
+++ b/src/views/manage-import/components/Table/styles.css
@@ -176,7 +176,7 @@
 }
 
 .order-ETA-notif {
-    background-image: linear-gradient(#f0adad, #fff);
+    background-image: linear-gradient(rgb(144, 189, 219), #fff);
 }
 
 .wrap { 
